src/test/resources/semantic/reject/duplicateParamSameTypes.ul
void main() {
}

void foo(string duplicate, string duplicate) {
}
